sentinelcloud/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinelcloud
  labels:
    # Pod Security Standards en mode restrictif (Zero-Trust à la base)
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
