sentinelcloud/k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: sentinelcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: sentinelcloud/auth-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: sentinelcloud
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
