sentinelcloud/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentinelcloud-ingress
  namespace: sentinelcloud
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: sentinelcloud.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
          - path: /reservations
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port:
                  number: 8001
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: resource-service
                port:
                  number: 8002
